added equipment post and get routes and finished testing mod post route
